# SNPE_Yolo

./: CMakeLists.txt  LICENSE  README.md  build_app.sh  image_inference.sh  install_dependencies.sh  install_opencv.sh  video_inference.sh  webcam_inference.sh
detect/image_detect/: CMakeLists.txt  config.json  main.cpp
detect/video_detect/: CMakeLists.txt  VideoAnalyzer.cpp  VideoAnalyzer.h  VideoPipeline.cpp  VideoPipeline.h  config.json  main.cpp
detect/webcam_detect/: CMakeLists.txt  SafeQueue.h  VideoPipeline.cpp  VideoPipeline.h  config.json
snpetask/: SNPETask.cpp  SNPETask.h
utility/: Logger.h  utils.h
yolo/: CMakeLists.txt
yolo/inc/: YOLO.h  YOLOImpl.h
yolo/src/: YOLO.cpp  YOLOImpl.cpp
